--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,14 +2,18 @@
   text-align: center;
 }
 
-.App-header {
+.App {
   background-color: rgb(22, 46, 88);
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
+}
+
+td {
+  text-align: center;
+  padding: 0.5em;
 }
 
