--- a/frontend/src/Screen.css
+++ b/frontend/src/Screen.css
@@ -1,6 +1,6 @@
 #screen {
-    width: calc(160px*5);
-    height: calc(144px*5);
+    height: 70vh;
+    aspect-ratio: 160 / 144;
     image-rendering: pixelated;
     border: 5px solid rgb(2, 32, 78);
 }
